panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__join-lines__test_error_location_after_escaped_newline.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/join-lines/test_error_location_after_escaped_newline.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: use of undeclared identifier `a`
   ╭─[panko/tests/cases/join-lines/test_error_location_after_escaped_newline.c:5:5]
   │
 5 │     a;
   │     ┬  
   │     ╰── this name has not been declared
───╯
